syntax = "proto3";

option csharp_namespace = "WorkflowLib.DataStorage.InMemoryService.Grpc";

package InMemoryService;

service InMemoryStorage {
  rpc Save (SaveRequest) returns (InMemoryReply);
  rpc Search (SearchRequest) returns (InMemoryReply);
  rpc Remove (RemoveRequest) returns (InMemoryReply);
}

message SaveRequest {
  string key = 1;
  string value = 2;
}

message SearchRequest {
  string key = 1;
}

message RemoveRequest {
  string key = 1;
}

message InMemoryReply {
  string key = 1;
  string value = 2;
  bool error = 3;
  string message = 4;
}
